# cargo-localreg

./: Cargo.toml  config.json
src/: cargo_manifest.rs  main.rs  rest.rs
