cargo-features = ["edition"]

[package]
name = "cargo-localreg"
version = "0.1.0"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.12"
cargo = { git = "https://github.com/rep-nop/cargo", branch = "serialize-index-info" }
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"
dirs = "1.0.4"
git2 = "0.7.5"
